# cvsx2mvsx

./: .gitignore  LICENSE  README.md  cif_mesh.txt  main.py  pyproject.toml  test.py
api/: api.py
src/: all_dat.py  custom_tubhiswt.py  cvsx_zip_stats.py  emd-1832.py  examples.py  lattice_to_mesh.py  test.py  utils.py
src/convert/: common.py  convert_all.py  cvsx_to_inter.py  geometric.py  geometric_box_impl.py  geometric_cylinder_impl.py  geometric_ellipsoid_impl.py  geometric_pyramid_impl.py  geometric_sphere_impl.py  lattice.py  lattice_segmentation.py  mesh.py  volume.py
src/cvsx-reader/: loader.py
src/examples/: __init__.py  all_dat.py  custom_tubhiswt.py  emd-1832.py  emd_1273.py  emd_1832.py  empiar_10070.py  empiar_11756.py  lattice_to_mesh.py  snapshots.py  test.py
src/io/: cvsx_loader.py  volumes.py
src/io/cvsx/: cvsx_loader.py
src/io/cvsx_reader/: loader.py
src/io/mvsx/: mvsj_builder.py
src/io/mvsx_writer/: volumes.py
src/lib/convert/: convert_all.py  cvsx_to_inter.py  lattice_segmentation.py
src/lib/io/: cvsx_loader.py  cvsx_reader.py  mvsj_builder.py  mvsx_generator.py
src/lib/utils/: transforms.py
src/models/cvsx/: cvsx_annotations.py  cvsx_common.py  cvsx_entry.py  cvsx_file.py  cvsx_index.py  cvsx_metadata.py  cvsx_query.py
src/models/intermediary/: inter.py
src/models/mvsx/: mvsx_entry.py  mvsx_segmentation.py  mvsx_volume.py
src/models/read/: common.py  geometric.py  lattice.py  mesh.py  volume.py
src/models/write/: mesh.py  mesh_triangle.py  (+6 more)
src/mvsx-writer/: volumes.py
src/utils/: print_utils.py  transforms.py
(+42 files in other folders)
