[project]
name = "cvsx2mvsx"
version = "0.0.0"
description = "Library for converting the CVSX file format into the MVSX file format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ciftools>=0.2.1",
    "fastapi[standard]>=0.120.3",
    "molviewspec>=1.7.0",
    "pydantic>=2.12.3",
    "scikit-image>=0.25.2",
]
